--- a/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
+++ b/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
@@ -1,1 +1,14 @@
-spring.application.name=rest-with-spring-boot-and-java
+spring:
+  datasource:
+    dbcp2:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/rest_with_spring_boot?useTimezone=true&serverTimezone=UTC
+      username: root
+      password: 221015
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL9Dialect
+        show_sql: false
