--- a/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
+++ b/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
@@ -7,7 +7,5 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
     show_sql: true
+    open-in-view: true
