--- a/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/pom.xml
+++ b/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<modelmapper.version>3.0.0</modelmapper.version>
 		<dozer.version>7.0.0</dozer.version>
 	</properties>
 	<dependencies>
@@ -51,10 +52,17 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>com.github.dozermapper</groupId>-->
+<!--			<artifactId>dozer-core</artifactId>-->
+<!--			<version>${dozer.version}</version>-->
+<!--		</dependency>-->
+
 		<dependency>
-			<groupId>com.github.dozermapper</groupId>
-			<artifactId>dozer-core</artifactId>
-			<version>7.0.0</version>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${modelmapper.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
