--- a/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
+++ b/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
     password: 221015
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show_sql: true
     open-in-view: true
