--- a/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/pom.xml
+++ b/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/pom.xml
@@ -56,6 +56,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
         </dependency>
