--- a/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
+++ b/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
@@ -9,3 +9,7 @@ spring:
       ddl-auto: none
     show_sql: true
     open-in-view: true
+spring-doc:
+  paths-to-match: /api/**
+  swagger-ui:
+    use-root-path: true
